create simple model

--- a/notebooks/simple_NN.ipynb
+++ b/notebooks/simple_NN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -12,8 +12,47 @@
     "import tensorflow as tf\n",
     "\n",
     "from tensorflow.keras import Sequential\n",
-    "from tensorflow.keras.layers import Dense\n"
+    "from tensorflow.keras.layers import Dense"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### ***most simple neural net with one layer and one neuron***\n",
+    "\n",
+    "When using TensorFlow, you define your layers using Sequential. Inside the Sequential, you\n",
+    "then specify what each layer looks like. We only have one line inside our Sequential, so we\n",
+    "have only one layer.\n",
+    "\n",
+    "You then define what the layer looks like using the keras. Layers API. There are lots\n",
+    "of different layer types, but here we’re using a Dense layer. “Dense” means a set of\n",
+    "fully (or densely) connected neurons.\n",
+    "\n",
+    "You can read epochs as “fit the Xs to the Ys, and try it 500 times.” So, on the first try, the\n",
+    "computer will guess the relationship (i.e., something like Y = 10X + 10), and measure\n",
+    "how good or bad that guess was. It will then feed those results to the optimizer, which\n",
+    "will generate another guess. This process will then be repeated, with the logic being\n",
+    "that the loss (or error) will go down over time, and as a result the “guess” will get bet‐\n",
+    "ter and better."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "model = Sequential([Dense(units=1, input_shape=[1])])\n",
+    "model.compile(optimizer='sgd', loss='mean_squared_error')\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
