--- a/notebooks/simple_NN.ipynb
+++ b/notebooks/simple_NN.ipynb
@@ -45,7 +45,23 @@
    "outputs": [],
    "source": [
     "model = Sequential([Dense(units=1, input_shape=[1])])\n",
-    "model.compile(optimizer='sgd', loss='mean_squared_error')\n"
+    "model.compile(optimizer='sgd', loss='mean_squared_error')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "xs = np.asarray([-1.0, 0.0, 1.0, 2.0, 3.0, 4.0], dtype=float)\n",
+    "ys = np.asarray([-3.0, -1.0, 1.0, 3.0, 5.0, 7.0], dtype=float)\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
