--- a/notebooks/simple_NN.ipynb
+++ b/notebooks/simple_NN.ipynb
@@ -1089,7 +1089,41 @@
     }
    ],
    "source": [
-    "model.fit(xs, ys, epochs=500)\n"
+    "model.fit(xs, ys, epochs=500)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The term prediction is typically used when dealing with ML models. Don’t think of it as\n",
+    "looking into the future, though! This term is used because we’re dealing with a certain\n",
+    "amount of uncertainty."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[18.99988],\n       [89.99925]], dtype=float32)"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(x=[10.0, 45.5])"
    ],
    "metadata": {
     "collapsed": false,
