weights and bias learned

--- a/notebooks/simple_NN.ipynb
+++ b/notebooks/simple_NN.ipynb
@@ -1131,6 +1131,30 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weight: [1.9999824]\n",
+      "bias: -0.9999454617500305\n"
+     ]
+    }
+   ],
+   "source": [
+    "weights, bias = model.get_weights()\n",
+    "print(f'weight: {weights[0]}\\nbias: {bias[0]}')\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
