--- a/notebooks/computer_vision.ipynb
+++ b/notebooks/computer_vision.ipynb
@@ -50,7 +50,13 @@
     "stands for rectified linear unit. It’s a simple function that just returns a value if it’s\n",
     "greater than 0. In this case, we don’t want negative values being passed to the next\n",
     "layer to potentially impact the summing function, so instead of writing a lot of\n",
-    "if-then code, we can simply activate the layer with relu.***"
+    "if-then code, we can simply activate the layer with relu.***\n",
+    "\n",
+    "The loss function in this case is called sparse categorical cross entropy, instead of us\n",
+    "trying to predict a single number, here we’re picking a category. Our item of clothing\n",
+    "will belong to 1 of 10 categories of clothing, and thus using a categorical loss function\n",
+    "is the way to go. Sparse categorical cross entropy is a good choice. The adam optimizer is\n",
+    "an evolution of the stochastic gradient descent (sgd) optimizer."
    ],
    "metadata": {
     "collapsed": false,
@@ -129,8 +135,46 @@
     "mnist_data = tf.keras.datasets.fashion_mnist\n",
     "(train_images, train_labels), (test_images, test_labels) = mnist_data.load_data()\n",
     "\n",
-    "len(train_images), len(test_images)\n"
+    "len(train_images), len(test_images)"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Recall that all the pixels in our images are grayscale, with values between 0 and 255.\n",
+    "Dividing by 255 thus ensures that every pixel is represented by a number between 0\n",
+    "and 1 instead. This process is called normalizing the image."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "train_images = train_images / 255.0\n",
+    "test_images = test_images / 255.0"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
