two convolutional layer model

--- a/notebooks/convalutional_net.ipynb
+++ b/notebooks/convalutional_net.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
     "from matplotlib import pyplot as plt\n",
     "from tensorflow.keras import Sequential\n",
     "from tensorflow.keras.layers import Dense\n",
-    "from tensorflow.keras.layers import Conv2D,MaxPool2D,Flatten"
+    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Activation"
    ]
   },
   {
@@ -58,9 +58,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": [],
-   "source": [],
+   "source": [
+    "model = Sequential()\n",
+    "\n",
+    "# 1st convolutional layer\n",
+    "model.add(Conv2D(64, kernel_size=(3, 3), input_shape=(28, 28, 1)))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "\n",
+    "# 2nd convolutional layer\n",
+    "model.add(Conv2D(64, kernel_size=(3, 3)))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "\n",
+    "# flatten\n",
+    "model.add(Flatten())\n",
+    "\n",
+    "# input layer\n",
+    "model.add(Dense(128))\n",
+    "model.add(Activation('relu'))\n",
+    "\n",
+    "# output layer\n",
+    "model.add(Dense(10, activation=tf.nn.softmax))\n",
+    "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "*model summery*"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d (Conv2D)              (None, 26, 26, 64)        640       \n",
+      "_________________________________________________________________\n",
+      "activation (Activation)      (None, 26, 26, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d (MaxPooling2D) (None, 13, 13, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_1 (Conv2D)            (None, 11, 11, 64)        36928     \n",
+      "_________________________________________________________________\n",
+      "activation_1 (Activation)    (None, 11, 11, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2 (None, 5, 5, 64)          0         \n",
+      "_________________________________________________________________\n",
+      "flatten (Flatten)            (None, 1600)              0         \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 128)               204928    \n",
+      "_________________________________________________________________\n",
+      "activation_2 (Activation)    (None, 128)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 10)                1290      \n",
+      "=================================================================\n",
+      "Total params: 243,786\n",
+      "Trainable params: 243,786\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
