load fashion mnist data

--- a/notebooks/convalutional_net.ipynb
+++ b/notebooks/convalutional_net.ipynb
@@ -148,6 +148,41 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "***MNIST fashion data***"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(60000, 10000)"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = tf.keras.datasets.fashion_mnist\n",
+    "\n",
+    "(train_images,train_labels), (test_images, test_labels) = data.load_data()\n",
+    "len(train_images), len(test_images)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
