--- a/notebooks/convalutional_net.ipynb
+++ b/notebooks/convalutional_net.ipynb
@@ -174,8 +174,58 @@
    "source": [
     "data = tf.keras.datasets.fashion_mnist\n",
     "\n",
-    "(train_images,train_labels), (test_images, test_labels) = data.load_data()\n",
+    "(train_images, train_labels), (test_images, test_labels) = data.load_data()\n",
     "len(train_images), len(test_images)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "***reshape images***"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "train_images = train_images.reshape(60000, 28, 28, 1)\n",
+    "train_images = train_images / 255.0\n",
+    "\n",
+    "test_images = test_images.reshape(10000, 28, 28, 1)\n",
+    "test_images = test_images / 255.0"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "((10000, 28, 28, 1), (60000, 28, 28, 1))"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_images.shape, train_images.shape"
    ],
    "metadata": {
     "collapsed": false,
