split data into train and validation by splitting across folders

--- a/notebooks/complex_conv.ipynb
+++ b/notebooks/complex_conv.ipynb
@@ -2,9 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "source": [
@@ -13,6 +16,7 @@
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "from tensorflow.keras import Sequential\n",
     "from tensorflow.keras.layers import Dense"
    ]
@@ -38,13 +42,30 @@
     "urllib.request.urlretrieve(url, file_name)\n",
     "zip_ref = zipfile.ZipFile(file_name,'r')\n",
     "zip_ref.extractall(training_dir)\n",
-    "zip_ref.close()\n"
+    "zip_ref.close()"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n",
      "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "img_data_gen = ImageDataGenerator(rescale=1/255)\n",
+    "\n",
+    "train_gen = img_data_gen.flow_from_directory(directory=training_dir,target_size=(300,300),\n",
+    "                                             class_mode='binary')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
