--- a/notebooks/complex_conv.ipynb
+++ b/notebooks/complex_conv.ipynb
@@ -2,12 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -18,7 +15,9 @@
     "\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "from tensorflow.keras import Sequential\n",
-    "from tensorflow.keras.layers import Dense"
+    "from tensorflow.keras.optimizers import RMSprop\n",
+    "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Activation"
    ]
   },
   {
@@ -32,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "url = \"https://storage.googleapis.com/laurencemoroney-blog.appspot.com/horse-or-human.zip\"\n",
@@ -40,15 +39,153 @@
     "training_dir = '../data/horse-or-human/training/'\n",
     "\n",
     "urllib.request.urlretrieve(url, file_name)\n",
-    "zip_ref = zipfile.ZipFile(file_name,'r')\n",
+    "zip_ref = zipfile.ZipFile(file_name, 'r')\n",
     "zip_ref.extractall(training_dir)\n",
     "zip_ref.close()"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1027 images belonging to 2 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "img_data_gen = ImageDataGenerator(rescale=1 / 255)\n",
+    "\n",
+    "train_gen = img_data_gen.flow_from_directory(directory=training_dir, target_size=(300, 300),\n",
+    "                                             class_mode='binary')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "***create model***"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_6 (Conv2D)            (None, 298, 298, 16)      448       \n",
+      "_________________________________________________________________\n",
+      "activation_6 (Activation)    (None, 298, 298, 16)      0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_5 (MaxPooling2 (None, 149, 149, 16)      0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_7 (Conv2D)            (None, 147, 147, 32)      4640      \n",
+      "_________________________________________________________________\n",
+      "activation_7 (Activation)    (None, 147, 147, 32)      0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_6 (MaxPooling2 (None, 73, 73, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_8 (Conv2D)            (None, 71, 71, 64)        18496     \n",
+      "_________________________________________________________________\n",
+      "activation_8 (Activation)    (None, 71, 71, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_7 (MaxPooling2 (None, 35, 35, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_9 (Conv2D)            (None, 33, 33, 64)        36928     \n",
+      "_________________________________________________________________\n",
+      "activation_9 (Activation)    (None, 33, 33, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_8 (MaxPooling2 (None, 16, 16, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_10 (Conv2D)           (None, 14, 14, 64)        36928     \n",
+      "_________________________________________________________________\n",
+      "activation_10 (Activation)   (None, 14, 14, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_9 (MaxPooling2 (None, 7, 7, 64)          0         \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 3136)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 512)               1606144   \n",
+      "_________________________________________________________________\n",
+      "activation_11 (Activation)   (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_3 (Dense)              (None, 1)                 513       \n",
+      "=================================================================\n",
+      "Total params: 1,704,097\n",
+      "Trainable params: 1,704,097\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Sequential()\n",
+    "\n",
+    "# 1st convolutional layer\n",
+    "model.add(Conv2D(16, kernel_size=(3, 3), input_shape=(300, 300, 3)))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "\n",
+    "# 2st convolutional layer\n",
+    "model.add(Conv2D(32, kernel_size=(3, 3)))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "\n",
+    "# 3st convolutional layer\n",
+    "model.add(Conv2D(64, kernel_size=(3, 3)))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "\n",
+    "# 4st convolutional layer\n",
+    "model.add(Conv2D(64, kernel_size=(3, 3)))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "\n",
+    "# 5st convolutional layer\n",
+    "model.add(Conv2D(64, kernel_size=(3, 3)))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "\n",
+    "# flatten\n",
+    "model.add(Flatten())\n",
+    "\n",
+    "# input layer\n",
+    "model.add(Dense(512))\n",
+    "model.add(Activation('relu'))\n",
+    "\n",
+    "# output layer\n",
+    "model.add(Dense(1, activation='sigmoid'))\n",
+    "\n",
+    "model.compile(loss='binary_crossentropy', optimizer=RMSprop(learning_rate=0.001))\n",
+    "model.summary()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   },
@@ -56,12 +193,7 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [
-    "img_data_gen = ImageDataGenerator(rescale=1/255)\n",
-    "\n",
-    "train_gen = img_data_gen.flow_from_directory(directory=training_dir,target_size=(300,300),\n",
-    "                                             class_mode='binary')"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
