--- a/notebooks/complex_conv.ipynb
+++ b/notebooks/complex_conv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -13,6 +13,7 @@
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "\n",
+    "from tensorflow.keras import Model, layers\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "from tensorflow.keras import Sequential\n",
     "from tensorflow.keras.optimizers import RMSprop\n",
@@ -1116,7 +1117,22 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "for layer in pre_trained_model.layers:\n",
+    "    layer.trainable = False\n",
+    "\n",
+    "last_layer = pre_trained_model.get_layer('mixed7')\n",
+    "last_output = last_layer.output\n",
+    "\n",
+    "# Flatten the output layer to 1 dimension\n",
+    "x = layers.Flatten()(last_output)\n",
+    "\n",
+    "# Add a fully connected layer with 1,024 hidden units and ReLU activation\n",
+    "x = layers.Dense(1024, activation='relu')(x)\n",
+    "\n",
+    "# Add a final sigmoid layer for classification\n",
+    "x = layers.Dense(1, activation='sigmoid')(x)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
