class balance of training data

--- a/notebooks/cat and dogs.ipynb
+++ b/notebooks/cat and dogs.ipynb
@@ -8,6 +8,7 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "import urllib.request\n",
     "import zipfile\n",
     "\n",
@@ -16,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "train_url = 'https://storage.googleapis.com/laurencemoroney-blog.appspot.com/rps.zip'\n",
@@ -42,8 +43,37 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total training rock images: 840\n",
+      "total training paper images: 840\n",
+      "total training scissors images: 840\n"
+     ]
+    }
+   ],
+   "source": [
+    "rock_dir = os.path.join('../data/rsp/training/rps/paper/')\n",
+    "paper_dir = os.path.join('../data/rsp/training/rps/rock/')\n",
+    "scissor_dir = os.path.join('../data/rsp/training/rps/scissors/')\n",
+    "\n",
+    "print('total training rock images:', len(os.listdir(rock_dir)))\n",
+    "print('total training paper images:', len(os.listdir(paper_dir)))\n",
+    "print('total training scissors images:', len(os.listdir(scissor_dir)))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
