--- a/notebooks/cat and dogs.ipynb
+++ b/notebooks/cat and dogs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,12 @@
     "import zipfile\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
-    "from matplotlib import image as img"
+    "from matplotlib import image as img\n",
+    "\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Activation"
    ]
   },
   {
@@ -110,8 +115,118 @@
     "    image = img.imread(img_path)\n",
     "    plt.imshow(image)\n",
     "\n",
-    "plt.tight_layout()\n"
+    "plt.tight_layout()"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d (Conv2D)              (None, 148, 148, 64)      1792      \n",
+      "_________________________________________________________________\n",
+      "activation (Activation)      (None, 148, 148, 64)      0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d (MaxPooling2D) (None, 74, 74, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_1 (Conv2D)            (None, 72, 72, 64)        36928     \n",
+      "_________________________________________________________________\n",
+      "activation_1 (Activation)    (None, 72, 72, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2 (None, 36, 36, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_2 (Conv2D)            (None, 34, 34, 64)        36928     \n",
+      "_________________________________________________________________\n",
+      "activation_2 (Activation)    (None, 34, 34, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_2 (MaxPooling2 (None, 17, 17, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_3 (Conv2D)            (None, 15, 15, 64)        36928     \n",
+      "_________________________________________________________________\n",
+      "activation_3 (Activation)    (None, 15, 15, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_3 (MaxPooling2 (None, 7, 7, 64)          0         \n",
+      "_________________________________________________________________\n",
+      "flatten (Flatten)            (None, 3136)              0         \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 512)               1606144   \n",
+      "_________________________________________________________________\n",
+      "activation_4 (Activation)    (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 3)                 1539      \n",
+      "_________________________________________________________________\n",
+      "activation_5 (Activation)    (None, 3)                 0         \n",
+      "=================================================================\n",
+      "Total params: 1,720,259\n",
+      "Trainable params: 1,720,259\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Sequential()\n",
+    "\n",
+    "# 1st convolutional layer\n",
+    "model.add(Conv2D(64, kernel_size=(3, 3), input_shape=(150, 150, 3)))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "\n",
+    "# 2nd convolutional layer\n",
+    "model.add(Conv2D(64, kernel_size=(3, 3)))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "\n",
+    "# 3rd convolutional layer\n",
+    "model.add(Conv2D(64, kernel_size=(3, 3)))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "\n",
+    "# 4th convolutional layer\n",
+    "model.add(Conv2D(64, kernel_size=(3, 3)))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "\n",
+    "# flatten\n",
+    "model.add(Flatten())\n",
+    "\n",
+    "# input layer\n",
+    "model.add(Dense(512))\n",
+    "model.add(Activation('relu'))\n",
+    "\n",
+    "# output layer\n",
+    "model.add(Dense(3))\n",
+    "model.add(Activation('softmax'))\n",
+    "\n",
+    "model.compile(loss='categorical_crossentropy', optimizer='rmsprop',\n",
+    "              metrics=['accuracy'])\n",
+    "model.summary()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
