--- a/notebooks/cat and dogs.ipynb
+++ b/notebooks/cat and dogs.ipynb
@@ -224,6 +224,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 2520 images belonging to 3 classes.\n",
+      "Found 372 images belonging to 3 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "training_gen = ImageDataGenerator(rescale=1. / 255,\n",
+    "                                  rotation_range=40,\n",
+    "                                  width_shift_range=0.2,\n",
+    "                                  height_shift_range=0.2,\n",
+    "                                  shear_range=0.2,\n",
+    "                                  zoom_range=0.2,\n",
+    "                                  horizontal_flip=True,\n",
+    "                                  fill_mode='nearest')\n",
+    "train_generator = training_gen.flow_from_directory(directory='../data/rsp/training/rps/',\n",
+    "                                                   target_size=(150, 150),\n",
+    "                                                   class_mode='categorical')\n",
+    "\n",
+    "validation_gen = ImageDataGenerator(rescale=1. / 255)\n",
+    "valid_generator = validation_gen.flow_from_directory(directory='../data/rsp/testing/rps-test-set/',\n",
+    "                                                     target_size=(150, 150),\n",
+    "                                                     class_mode='categorical')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
