--- a/notebooks/cat and dogs.ipynb
+++ b/notebooks/cat and dogs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense\n",
-    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Activation"
+    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Activation, Dropout"
    ]
   },
   {
@@ -312,9 +312,137 @@
     }
    ],
    "source": [
-    "model.fit(train_generator,epochs=20,validation_data=valid_generator)\n",
-    "model.save('../models/rps.h5')\n"
+    "model.fit(train_generator, epochs=20, validation_data=valid_generator)\n",
+    "model.save('../models/rps.h5')"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_4 (Conv2D)            (None, 148, 148, 64)      1792      \n",
+      "_________________________________________________________________\n",
+      "activation_6 (Activation)    (None, 148, 148, 64)      0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_4 (MaxPooling2 (None, 74, 74, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "dropout (Dropout)            (None, 74, 74, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_5 (Conv2D)            (None, 72, 72, 64)        36928     \n",
+      "_________________________________________________________________\n",
+      "activation_7 (Activation)    (None, 72, 72, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_5 (MaxPooling2 (None, 36, 36, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "dropout_1 (Dropout)          (None, 36, 36, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_6 (Conv2D)            (None, 34, 34, 64)        36928     \n",
+      "_________________________________________________________________\n",
+      "activation_8 (Activation)    (None, 34, 34, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_6 (MaxPooling2 (None, 17, 17, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "dropout_2 (Dropout)          (None, 17, 17, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_7 (Conv2D)            (None, 15, 15, 64)        36928     \n",
+      "_________________________________________________________________\n",
+      "activation_9 (Activation)    (None, 15, 15, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_7 (MaxPooling2 (None, 7, 7, 64)          0         \n",
+      "_________________________________________________________________\n",
+      "dropout_3 (Dropout)          (None, 7, 7, 64)          0         \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 3136)              0         \n",
+      "_________________________________________________________________\n",
+      "dropout_4 (Dropout)          (None, 3136)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 512)               1606144   \n",
+      "_________________________________________________________________\n",
+      "activation_10 (Activation)   (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "dropout_5 (Dropout)          (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_3 (Dense)              (None, 3)                 1539      \n",
+      "_________________________________________________________________\n",
+      "activation_11 (Activation)   (None, 3)                 0         \n",
+      "=================================================================\n",
+      "Total params: 1,720,259\n",
+      "Trainable params: 1,720,259\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_gen = Sequential()\n",
+    "\n",
+    "# 1st convolutional layer\n",
+    "model_gen.add(Conv2D(64, kernel_size=(3, 3), input_shape=(150, 150, 3)))\n",
+    "model_gen.add(Activation('relu'))\n",
+    "model_gen.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "model_gen.add(Dropout(rate=0.2))\n",
+    "\n",
+    "# 2nd convolutional layer\n",
+    "model_gen.add(Conv2D(64, kernel_size=(3, 3)))\n",
+    "model_gen.add(Activation('relu'))\n",
+    "model_gen.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "model_gen.add(Dropout(rate=0.2))\n",
+    "\n",
+    "# 3rd convolutional layer\n",
+    "model_gen.add(Conv2D(64, kernel_size=(3, 3)))\n",
+    "model_gen.add(Activation('relu'))\n",
+    "model_gen.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "model_gen.add(Dropout(rate=0.2))\n",
+    "\n",
+    "# 4th convolutional layer\n",
+    "model_gen.add(Conv2D(64, kernel_size=(3, 3)))\n",
+    "model_gen.add(Activation('relu'))\n",
+    "model_gen.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "model_gen.add(Dropout(rate=0.2))\n",
+    "\n",
+    "# flatten\n",
+    "model_gen.add(Flatten())\n",
+    "model_gen.add(Dropout(rate=0.2))\n",
+    "\n",
+    "# input layer\n",
+    "model_gen.add(Dense(512))\n",
+    "model_gen.add(Activation('relu'))\n",
+    "model_gen.add(Dropout(rate=0.2))\n",
+    "\n",
+    "# output layer\n",
+    "model_gen.add(Dense(3))\n",
+    "model_gen.add(Activation('softmax'))\n",
+    "\n",
+    "model_gen.compile(loss='categorical_crossentropy', optimizer='rmsprop',\n",
+    "                  metrics=['accuracy'])\n",
+    "model_gen.summary()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
