--- a/notebooks/TFDS/tensorflow datasets.ipynb
+++ b/notebooks/TFDS/tensorflow datasets.ipynb
@@ -160,6 +160,53 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(mnist_data))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tensorflow.python.data.ops.dataset_ops.PrefetchDataset'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "mnist_train = tfds.load(name='fashion_mnist',\n",
+    "                        split='train')\n",
+    "assert isinstance(mnist_train,tf.data.Dataset)\n",
+    "print(type(mnist_train))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
